piping first game to backend

--- a/src/main/resources/ticTacToe.html
+++ b/src/main/resources/ticTacToe.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<script type="text/javascript" src="../js/ticTacToe.js"></script>
+<script type="text/javascript" src="static/js/postGame.js"></script>
+<script type="text/javascript" src="static/js/ticTacToe.js"></script>
 </head>
 <body>
 
