end point name change en login form

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,6 +19,7 @@
 <button type="button" id="buttoninput" onclick="postGame()" class="btn btn-primary">Post game</button>
 <button type="submit" id="buttoninput" onclick="getUser()" class="btn btn-primary">Get user</button>
 <button type="button" id="buttoninput" onclick="postUser()" class="btn btn-primary">Post user</button>
+<a href="../registration.html">Go to registration</a>
 
 
 <div id="outputserver"></div>
