--- a/src/main/resources/static/registration.html
+++ b/src/main/resources/static/registration.html
@@ -4,6 +4,27 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 <title>Form</title>
+<script>
+function postLogin(){
+	var name= document.getElementById("username").value;
+	var pw= document.getElementById("password").value;
+	var age= document.getElementById("age").value;
+	var country= document.getElementById("country").value;
+	
+	var user = '{"username":"'+name+'"password":"'+pw+'"age":"'+age+'"country":"'+country'"}';
+    var xhttp = new XMLHttpRequest();
+
+	xhttp.onreadystatechange = function() {
+		if (this.readyState == 4 && this.status == 202) {
+			document.getElementById("outputserver").innerHTML = this.responseText;
+		}
+	};
+
+	xhttp.open("POST", "http://localhost:8082/userpost", true);
+	xhttp.setRequestHeader("Content-type", "application/json");
+	xhttp.send(user);					
+}
+</script>
 </head>
 <body>
 
@@ -14,7 +35,7 @@
   </div>
 </div>
 
-<form action="create" method="post">
+<form action="postUser" method="post">
  <div class="form-group">
     <label for="username">Username</label>
     <input type="text" class="form-control" id="username" placeholder="Enter username" required>
@@ -31,7 +52,7 @@
     <label for="country">Country</label>
     <input type="text" class="form-control" id="country" placeholder="Enter country" required>
   </div>
-  <button type="submit" class="btn btn-primary">Create account</button>
+  <button type="submit" onclick="postLogin()" class="btn btn-primary">Create account</button>
 </form>
 
 </body>
