--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,6 +20,8 @@
 <button type="submit" id="buttoninput" onclick="getUser()" class="btn btn-primary">Get user</button>
 <button type="button" id="buttoninput" onclick="postUser()" class="btn btn-primary">Post user</button>
 <a href="../registration.html">Go to registration</a>
+<a href="ticTacToe.html">Go to first game</a>
+
 
 
 <div id="outputserver"></div>
