--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,18 +9,33 @@
 <body>		
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-3">Welkom</h1>
-    <p class="lead">Op deze website kun je games spelen en gold coins verdienen.</p>
+    <h1 class="display-3">Welcome</h1>
+    <p class="lead">Welcome to the best website in the world.</p>
   </div>
 </div>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="index.html">Home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="login.html">Login</a>
+      </li>      
+      <li class="nav-item">
+        <a class="nav-link" href="registration.html">Register</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 <input type="text" id="gamename" value="gametest"><br>
 <button type="submit" id="buttoninput" onclick="getGame()" class="btn btn-primary">Get game</button>
 <button type="button" id="buttoninput" onclick="postGame()" class="btn btn-primary">Post game</button>
 <button type="submit" id="buttoninput" onclick="getUser()" class="btn btn-primary">Get user</button>
 <button type="button" id="buttoninput" onclick="postUser()" class="btn btn-primary">Post user</button>
-<a href="../registration.html">Go to registration</a>
-
 
 <div id="outputserver"></div>
 </body>
