--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -10,8 +10,8 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-3">Register</h1>
-    <p class="lead">Create a new account.</p>
+    <h1 class="display-3">Login</h1>
+    <p class="lead">Log into your account.</p>
   </div>
 </div>
 
@@ -22,11 +22,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="login.html">Login</a>
-      </li>      
       <li class="nav-item active">
-        <a class="nav-link" href="registration.html">Register<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="login.html">Login<span class="sr-only">(current)</span></a>
+      </li>      
+      <li class="nav-item">
+        <a class="nav-link" href="registration.html">Register</a>
       </li>
     </ul>
   </div>
@@ -41,15 +41,7 @@
     <label for="password">Password</label>
     <input type="password" class="form-control" id="password" placeholder="Enter password" required>
   </div>
-  <div class="form-group">
-    <label for="age">Age</label>
-    <input type="number" class="form-control" id="age" placeholder="Enter age" required>
-  </div>
- <div class="form-group">
-    <label for="country">Country</label>
-    <input type="text" class="form-control" id="country" placeholder="Enter country" required>
-  </div>
-  <button type="submit" onclick="postUser()" class="btn btn-primary">Create account</button>
+  <button type="submit" onclick="postUser()" class="btn btn-primary">Login</button>
 </form>
 
 <div id="outputserver"></div>
