--- a/src/main/resources/static/registration.html
+++ b/src/main/resources/static/registration.html
@@ -6,6 +6,7 @@
 <title>Form</title>
 <script src="../js/postUser.js"></script>
 </head>
+
 <body>
 
 <div class="jumbotron jumbotron-fluid">
@@ -23,7 +24,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="login.html">Login</a>
+        <a class="nav-link" href="logins.html">Login</a>
       </li>      
       <li class="nav-item active">
         <a class="nav-link" href="registration.html">Register<span class="sr-only">(current)</span></a>
