Tic Tac Toe pagina created

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,16 +27,14 @@
       <li class="nav-item">
         <a class="nav-link" href="registration.html">Register</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="ticTacToe.html">Tic Tac Toe</a>
+      </li>
     </ul>
   </div>
 </nav>
 
-<input type="text" id="gamename" value="gametest"><br>
-<button type="submit" id="buttoninput" onclick="getGame()" class="btn btn-primary">Get game</button>
-<button type="button" id="buttoninput" onclick="postGame()" class="btn btn-primary">Post game</button>
-<button type="submit" id="buttoninput" onclick="getUser()" class="btn btn-primary">Get user</button>
-<button type="button" id="buttoninput" onclick="postUser()" class="btn btn-primary">Post user</button>
-
+<p>UNDER CONSTRUCTION</p>
 
 <div id="outputserver"></div>
 </body>
