--- a/src/main/resources/static/registration.html
+++ b/src/main/resources/static/registration.html
@@ -29,6 +29,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="registration.html">Register<span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="ticTacToe.html">Tic Tac Toe</a>
+      </li>
     </ul>
   </div>
 </nav>
