Working login function and page

--- a/src/main/resources/static/logins.html
+++ b/src/main/resources/static/logins.html
@@ -46,7 +46,7 @@
     <label for="password">Password</label>
     <input type="password" class="form-control" id="password" placeholder="Enter password" required>
   </div>
-  <button type="submit" onclick="postLogin()" class="btn btn-primary">Login</button>
+  <input type="button" onclick="postLogin()" class="btn btn-primary" value="Login">
 </form>
 
 <div id="outputserver"></div>
