Homepage + bootstrap aanpassingen

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,13 +7,6 @@
 <script src="../js/postUser.js"></script>
 </head>
 <body>		
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-3">Welcome</h1>
-    <p class="lead">Welcome to the best website in the world.</p>
-  </div>
-</div>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="index.html">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,9 +26,24 @@
     </ul>
   </div>
 </nav>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">Welcome</h1>
+    <p class="lead">Welcome to the best website in the world.</p>
+  </div>
+</div>
 
-<p>UNDER CONSTRUCTION</p>
+<div class="container">
+	<div class="row">
+		<div class="column-md-4">
+			<p>UNDER CONSTRUCTION</p>
+		</div>
+	</div>
+</div>
 
 <div id="outputserver"></div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 </html>
