--- a/src/main/resources/static/registration.html
+++ b/src/main/resources/static/registration.html
@@ -8,14 +8,6 @@
 </head>
 
 <body>
-
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-3">Register</h1>
-    <p class="lead">Create a new account.</p>
-  </div>
-</div>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="index.html">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,27 +28,48 @@
   </div>
 </nav>
 
-<form>
- <div class="form-group">
-    <label for="username">Username</label>
-    <input type="text" class="form-control" id="username" placeholder="Enter username" required>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">Register</h1>
+    <p class="lead">Create a new account.</p>
   </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" class="form-control" id="password" placeholder="Enter password" required>
-  </div>
-  <div class="form-group">
-    <label for="age">Age</label>
-    <input type="number" class="form-control" id="age" placeholder="Enter age" required>
-  </div>
- <div class="form-group">
-    <label for="country">Country</label>
-    <input type="text" class="form-control" id="country" placeholder="Enter country" required>
-  </div>
-  <button type="submit" onclick="postUser()" class="btn btn-primary">Create account</button>
-</form>
+</div>
 
-<div id="outputserver"></div>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4">
+			<form>
+			 <div class="form-group">
+			    <label for="username">Username</label>
+			    <input type="text" class="form-control" id="username" placeholder="Enter username" required>
+			  </div>
+			  <div class="form-group">
+			    <label for="password">Password</label>
+			    <input type="password" class="form-control" id="password" placeholder="Enter password" required>
+			  </div>
+			  <div class="form-group">
+			    <label for="email">Email</label>
+			    <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+			  </div>
+			  <div class="form-group">
+			    <label for="age">Age</label>
+			    <input type="number" class="form-control" id="age" placeholder="Enter age" required>
+			  </div>
+			 <div class="form-group">
+			    <label for="country">Country</label>
+			    <input type="text" class="form-control" id="country" placeholder="Enter country" required>
+			  </div>
+			  <button type="submit" onclick="postUser()" class="btn btn-primary">Create account</button>
+			</form>
+		</div>
+	</div>
 
+	<div class="row">	
+		<div id="outputserver"></div>
+	</div>
+</div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 </html>
