tetris implemented (although size has to be changed), registration seems to work on my computer now as well

--- a/src/main/resources/static/success.html
+++ b/src/main/resources/static/success.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
 <title>Form</title>
 <script src="../js/postUser.js"></script>
 </head>
@@ -23,6 +25,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="ticTacToe.html">Tic Tac Toe</a>
+      </li>
+            <li class="nav-item">
+        <a class="nav-link" href="tetris.html">Tetris</a>
       </li>
     </ul>
   </div>
