--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,6 +22,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="ticTacToe.html">Tic Tac Toe</a>
+        <li class="nav-item">
+        <a class="nav-link" href="tetris.html">tetris</a>
+      </li>
       </li>
     </ul>
   </div>
