--- a/src/main/resources/static/logins.html
+++ b/src/main/resources/static/logins.html
@@ -25,6 +25,9 @@
       <li class="nav-item">
         <a class="nav-link" href="ticTacToe.html">Tic Tac Toe</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="tetris.html">tetris</a>
+      </li>
     </ul>
   </div>
 </nav>
