--- a/src/main/resources/static/ticTacToe.html
+++ b/src/main/resources/static/ticTacToe.html
@@ -37,6 +37,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="ticTacToe.html">Tic Tac Toe<span class="sr-only">(current)</span></a>
       </li>
+          <li class="nav-item active">
+        <a class="nav-link" href="tetris.html">tetris<span class="sr-only">(current)</span></a>
+      </li>
     </ul>
   </div>
 </nav>
