--- a/src/main/resources/static/tetris.html
+++ b/src/main/resources/static/tetris.html
@@ -29,6 +29,9 @@
 
 <body>
 
+  <div class="container">
+  <div class="row">
+  <div class="col-lg-6">
   <div id="tetris">
     <div id="menu">
       <p id="start"><a href="javascript:play();">Press Space to Play.</a></p>
@@ -39,6 +42,38 @@
     <canvas id="canvas">
       Sorry, this example cannot be run because your browser does not support the &lt;canvas&gt; element
     </canvas>
+  </div>
+  </div>
+  </div>
+  <div clas="row justify-content-md-center">
+  	<div class="col-md-4"> 
+		<h4>Highscores</h4>
+		<table>
+			<tbody>
+				<tr>
+					<td>1.</td>
+					<td>Bas</td>
+					<td>63829 <i class="fa fa-trophy" aria-hidden="true"></i></td>
+				</tr>
+				<tr>
+					<td>2.</td>
+					<td>Tom</td>
+					<td>23329</td>
+				</tr>
+				<tr>
+					<td>3.</td>
+					<td>Tom</td>
+					<td>13329</td>
+				</tr>
+				<tr>
+					<td>4.</td>
+					<td>Lana</td>
+					<td>1337</td>
+				</tr>
+			</tbody>
+		</table>
+  	</div>
+  </div>
   </div>
 
   <script src="/js/stats.js"></script>
