working on the cookies

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
 <script src="../js/postGame.js"></script>
 <script src="../js/getUser.js"></script>
 <script src="../js/postUser.js"></script>
+<script src="../js/cookieFactory.js"></script>
 </head>
 <body>		
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
