--- a/src/main/resources/static/ticTacToe.html
+++ b/src/main/resources/static/ticTacToe.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <script type="text/javascript" src="js/postGame.js"></script>
 <script type="text/javascript" src="js/ticTacToe.js"></script>
+<script src="../js/cookieFactory.js"></script>
+
+<script src="js/w3.js"></script>
 <style>
 	input.tictac {
 		font-size: 48px;
@@ -19,6 +22,8 @@
 		line-height: 80px;
 	}
 </style>
+
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
