--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<script src="../js/cookieFactory.js"></script>
+<script src="../js/removeCookies.js"></script>
 <script src="../js/getGame.js"></script>
 <script src="../js/postGame.js"></script>
 <script src="../js/getUser.js"></script>
 <script src="../js/postUser.js"></script>
-<script src="../js/cookieFactory.js"></script>
 </head>
 <body>		
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
