--- a/src/main/resources/static/tetris.html
+++ b/src/main/resources/static/tetris.html
@@ -7,7 +7,6 @@
 	
   <title>Javascript Tetris</title>
   <style>
-    body      { font-family: Helvetica, sans-serif; }
     #tetris   { margin: 1em auto; padding: 1em; border-radius: 10px; background-color: #F8F8F8; }
     #stats    { display: inline-block; vertical-align: top; }
     #canvas   { display: inline-block; vertical-align: top; background: url(texture.jpg); box-shadow: 10px 10px 10px #999; width: 200px; height: 400px }
@@ -22,54 +21,79 @@
 </head>
 
 <body>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="index.html">Home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="logins.html">Login</a>
+      </li>      
+      <li class="nav-item">
+        <a class="nav-link" href="registration.html">Register</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="ticTacToe.html">Tic Tac Toe</a>
+        <li class="nav-item">
+        <a class="nav-link" href="tetris.html">tetris</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="jumbotron jumbotron-fluid">
   <div class="container">
-  <div class="row">
-  <div class="col-lg-6">
-  <div id="tetris">
-    <div id="menu">
-      <p id="start"><a href="javascript:play();">Press Space to Play.</a></p>
-      <p><canvas id="upcoming"></canvas></p>
-      <p>score <span id="score">00000</span></p>
-      <p>rows <span id="rows">0</span></p>
-    </div>
-    <canvas id="canvas">
-      Sorry, this example cannot be run because your browser does not support the &lt;canvas&gt; element
-    </canvas>
+    <h1 class="display-3">Tetris</h1>
+    <p class="lead">Play a game of tetris and increase your highscore.</p>
   </div>
-  </div>
-  <div class="col-lg-4"> 
-		<h4>Highscores</h4>
-		<table>
-			<tbody>
-				<tr>
-					<td>1.</td>
-					<td>Bas</td>
-					<td>63829 <i class="fa fa-trophy" aria-hidden="true"></i></td>
-				</tr>
-				<tr>
-					<td>2.</td>
-					<td>Tom</td>
-					<td>23329</td>
-				</tr>
-				<tr>
-					<td>3.</td>
-					<td>Tom</td>
-					<td>13329</td>
-				</tr>
-				<tr>
-					<td>4.</td>
-					<td>Lana</td>
-					<td>1337</td>
-				</tr>
-			</tbody>
-		</table>
-  	</div>
+</div>
+<div class="container">
+ 	<div class="row">
+  		<div class="col-lg-6">
+  			<div id="tetris">
+    			<div id="menu">
+      				<p id="start"><a href="javascript:play();">Press Space to Play.</a></p>
+      				<p><canvas id="upcoming"></canvas></p>
+				      <p>score <span id="score">00000</span></p>
+				      <p>rows <span id="rows">0</span></p>
+    			</div>
+    			<canvas id="canvas">
+      				Sorry, this example cannot be run because your browser does not support the &lt;canvas&gt; element
+    			</canvas>
+  			</div>
+  		</div>
+  		<div class="col-md-2"> 
+			<h4>Highscores</h4>
+				<table>
+					<tbody>
+						<tr>
+							<td>1.</td>
+							<td>Bas</td>
+							<td>63829 <i class="fa fa-trophy" aria-hidden="true"></i></td>
+						</tr>
+						<tr>
+							<td>2.</td>
+							<td>Tom</td>
+							<td>23329</td>
+						</tr>
+						<tr>
+							<td>3.</td>
+							<td>Tom</td>
+							<td>13329</td>
+						</tr>
+						<tr>
+							<td>4.</td>
+							<td>Lana</td>
+							<td>1337</td>
+						</tr>
+					</tbody>
+				</table>
+  		</div>
   </div>
   <div class="row justify-content-md-center">
-  	
   </div>
-  </div>
+</div>
 
   <script src="/js/stats.js"></script>
   <script>
