--- a/src/main/resources/static/ticTacToe.html
+++ b/src/main/resources/static/ticTacToe.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <script type="text/javascript" src="js/postGame.js"></script>
 <script type="text/javascript" src="js/ticTacToe.js"></script>
-<script src="../js/cookieFactory.js"></script>
+<script src="js/cookieFactory.js"></script>
 
 <style>
 	input.tictac {
