--- a/src/main/resources/static/registration.html
+++ b/src/main/resources/static/registration.html
@@ -23,7 +23,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="registration.html">Register<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item">Kingsman
         <a class="nav-link" href="ticTacToe.html">Tic Tac Toe</a>
       </li>
       <li class="nav-item">
