--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -79,7 +79,7 @@
 			  </div>
 			  <div class="form-group">
 					<label for="dateofbirth">Date of birth</label><br/>
-						<select id="day" onchange="calcAge()">
+						<select id="day">
 							<option value="01" selected="selected">01</option>
 							<option value="02">02</option>
 							<option value="03">03</option>
@@ -112,7 +112,7 @@
 							<option value="30">30</option>
 							<option value="31">31</option>
 						</select> 
-						<select id="month" onchange="calcAge()">
+						<select id="month">
 							<option value="01" selected="selected">January</option>
 							<option value="02">February</option>
 							<option value="03">March</option>
@@ -126,7 +126,7 @@
 							<option value="11">November</option>
 							<option value="12">December</option>
 						</select> 
-						<select id="year" onchange="calcAge()">
+						<select id="year">
 							<option value="2017">2017</option>
 							<option value="2016">2016</option>
 							<option value="2015">2015</option>
@@ -221,7 +221,7 @@
 			    <label for="country">Country</label>
 			    	<select id="country">
 						<option value="AFG">Afghanistan</option>
-						<option value="ALA">Åland Islands</option>
+						<option value="ALA">ï¿½land Islands</option>
 						<option value="ALB">Albania</option>
 						<option value="DZA">Algeria</option>
 						<option value="ASM">American Samoa</option>
@@ -274,10 +274,10 @@
 						<option value="COD">Congo, the Democratic Republic of the</option>
 						<option value="COK">Cook Islands</option>
 						<option value="CRI">Costa Rica</option>
-						<option value="CIV">Côte d'Ivoire</option>
+						<option value="CIV">Cï¿½te d'Ivoire</option>
 						<option value="HRV">Croatia</option>
 						<option value="CUB">Cuba</option>
-						<option value="CUW">Curaçao</option>
+						<option value="CUW">Curaï¿½ao</option>
 						<option value="CYP">Cyprus</option>
 						<option value="CZE">Czech Republic</option>
 						<option value="DNK">Denmark</option>
@@ -400,11 +400,11 @@
 						<option value="PRT">Portugal</option>
 						<option value="PRI">Puerto Rico</option>
 						<option value="QAT">Qatar</option>
-						<option value="REU">Réunion</option>
+						<option value="REU">Rï¿½union</option>
 						<option value="ROU">Romania</option>
 						<option value="RUS">Russian Federation</option>
 						<option value="RWA">Rwanda</option>
-						<option value="BLM">Saint Barthélemy</option>
+						<option value="BLM">Saint Barthï¿½lemy</option>
 						<option value="SHN">Saint Helena, Ascension and Tristan da Cunha</option>
 						<option value="KNA">Saint Kitts and Nevis</option>
 						<option value="LCA">Saint Lucia</option>
