--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,22 +19,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-      <!-- Button trigger modal -->
-				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModalLong">
-  				Login	
-				</button>
-      </li>      
-      <li class="nav-item">
-        <!-- Button trigger modal -->
-				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerModalLong">
-  				Registration	
-				</button>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" href="ticTacToe.html">Tic Tac Toe</a>
-        <li class="nav-item">
-        <a class="nav-link" href="tetris.html">tetris</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="tetris.html">Tetris</a>
       </li>
     </ul>
   </div>
@@ -49,7 +37,12 @@
 <div class="container">
 	<div class="row">
 		<div class="column-md-4">
-			<p>UNDER CONSTRUCTION</p>
+			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModalLong">
+  				Login	
+			</button>
+			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerModalLong">
+  				Registration	
+			</button>
 		</div>
 	</div>
 </div>
