--- a/src/main/resources/static/ticTacToe.html
+++ b/src/main/resources/static/ticTacToe.html
@@ -32,17 +32,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="logins.html">Login</a>
-      </li>      
-      <li class="nav-item">
-        <a class="nav-link" href="registration.html">Register</a>
-      </li>
       <li class="nav-item active">
-        <a class="nav-link" href="ticTacToe.html">Tic Tac Toe<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="ticTacToe.html">Tic Tac Toe</a>
       </li>
-          <li class="nav-item active">
-        <a class="nav-link" href="tetris.html">tetris<span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="tetris.html">Tetris</a>
       </li>
     </ul>
   </div>
