Added html page for the shop

--- a/src/main/resources/static/tetris.html
+++ b/src/main/resources/static/tetris.html
@@ -37,6 +37,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="tetris.html">Tetris</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="shop.html">Shop</a>
+      </li>
     </ul>
   </div>
 </nav>
