--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,6 +23,9 @@
       <li class="nav-item">
         <a class="nav-link" href="tetris.html">Tetris</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="shop.html">Shop</a>
+      </li>
     </ul>
   </div>
 </nav>
