Shop update saldo nog niet af -.-

--- a/src/main/resources/static/shop.html
+++ b/src/main/resources/static/shop.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 <title>Form</title>
 <script src="js/cookieFactory.js"></script>
-<script src="js/buyCoins.js"></script>
+<script src="js/postUser.js"></script>
+<script src="js/updateCoins.js"></script>
 
 
 </head>
@@ -50,7 +51,7 @@
 				<option value="48">€40 - 48 coins</option>
 				<option value="60">€50 - 60 coins</option>
 			</select>
-			<button type=button onclick="buyCoins()" class="btn btn-primary">Buy coins</button>
+			<button type=button onclick="updateCoins()" class="btn btn-primary">Buy coins</button>
 		</div>
 	</div>
 </div>
