Shop JS in progress

--- a/src/main/resources/static/shop.html
+++ b/src/main/resources/static/shop.html
@@ -51,7 +51,7 @@
 				<option value="48">€40 - 48 coins</option>
 				<option value="60">€50 - 60 coins</option>
 			</select>
-			<button type=button onclick="updateCoins()" class="btn btn-primary">Buy coins</button>
+			<button type=button onclick="updateCoins(value)" class="btn btn-primary">Buy coins</button>
 		</div>
 	</div>
 </div>
